--- a/style.css
+++ b/style.css
@@ -18,16 +18,21 @@ body {
 
 #store {
     max-width: 700px;
-    height: 50px;
     background: lightseagreen;
     margin: auto;
     text-align: center;
+    font-size: 20px;
     line-height: 45px;
     border-radius: 10px;
     box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.3);
     display: flex;
     justify-content: space-around;
-    font-size: 20px;
+    flex-direction: column;
+}
+
+.store-item {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 button {
@@ -39,7 +44,11 @@ button {
     margin-top: 10px;
 }
 
-button:active {
+.active {
+    filter: saturate(1.4);
+}
+
+.active:active {
     transform: translateY(2px);
 }
 
