--- a/style.css
+++ b/style.css
@@ -2,23 +2,28 @@ html,
 body {
     padding: 0;
     margin: 0;
+    font-family: 'Nunito', sans-serif;
+    background-image: linear-gradient(109.6deg, rgba(137, 191, 221, 1) 11.2%, rgba(150, 144, 204, 1) 100.2%);
+    color: white;
+    height: 100%;
+    width: 100%;
 }
 
 #stat-area {
     max-width: 700px;
     height: 50px;
-    background: lightseagreen;
+    background: rgba(255, 255, 255, .2);
     margin: auto;
     text-align: center;
     line-height: 47px;
     border-radius: 0px 0px 10px 10px;
     box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.3);
-    font-size: 28px;
+    font-size: 24px;
 }
 
 #store {
     max-width: 700px;
-    background: lightseagreen;
+    background: rgba(255, 255, 255, .2);
     margin: auto;
     text-align: center;
     font-size: 20px;
@@ -57,9 +62,14 @@ button {
     margin: 50px auto;
     width: 900px;
     height: 400px;
-    background: lightblue;
+    /* background-image: linear-gradient(109.6deg, rgba(137, 191, 221, 1) 11.2%, rgba(150, 144, 204, 1) 100.2%); */
+    background: rgba(255, 255, 255, .2);
     border-radius: 10px;
     box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.3);
+}
+
+#updates {
+    font-size: 16px;
 }
 
 #logo {
