--- a/style.css
+++ b/style.css
@@ -192,12 +192,13 @@ button {
     margin-top: 30px;
     text-align: center;
     font-size: 20px;
-    line-height: 45px;
     border-radius: 10px;
     box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.3);
     display: flex;
     justify-content: space-around;
     flex-direction: row;
+    height: 50px;
+    line-height: 50px
 }
 
 #links>a {
